# DxCapsViewer

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DxCapsViewer.manifest  HISTORY.md  LICENSE  RCa14452  README.md  ddraw.cpp  dinput.cpp  dsound.cpp  dxcapsviewer.sln  dxcapsviewer.vcproj  dxg.cpp  dxgi.cpp  dxprint.cpp  dxview.cpp  dxview.h  dxview.rc  resource.h  vcpkg.json
.azuredevops/pipelines/: DxCapsViewer-GitHub-Dev17.yml  DxCapsViewer-GitHub.yml
.github/workflows/: cmake-single-platform.yml  codeql.yml  lint.yml  main.yml  msvc.yml  vcpkg.yml
